# hackaton-toctoc

./: .env.example  .gitignore  Makefile  README.md  hipotecario.json  pyproject.toml
chat/: chatbot_client.py  template.py
client/: api_client.py  client_example.py
examples/: buscar_prop.json  tasar.json
src/: frontend.py
templates/: base.json  busqueda.json  hipotecario.json  tasar.json
toctoc/: openai_client.py  pydantic_agent.py  tracing.py
toctoc/chat/: chatbot_client.py  chatbot_example.py
toctoc/client/: api_client.py  client_example.py
toctoc/examples/: ex.py
toctoc/tools/: tools.py
